kubernetes/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-nginx
  namespace: devops-demo
spec:
  replicas: 1

  selector:
    matchLabels:
      app: devops-nginx

  template:
    metadata:
      labels:
        app: devops-nginx

    spec:
      containers:
        - name: nginx
          image: nginx:alpine

          ports:
            - containerPort: 80

          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf

      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
