kubernetes/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-app
  namespace: devops-demo
spec:
  selector:
    app: devops-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
