kubernetes/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-nginx
  namespace: devops-demo
spec:
  selector:
    app: devops-nginx

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

  type: ClusterIP
