kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-demo-ingress
  namespace: devops-demo
spec:
  ingressClassName: nginx

  rules:
    - host: devops-demo.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: devops-nginx
                port:
                  number: 80
